asupersync-macros/tests/compile_fail/entry_bad_arg.stderr
error: unsupported asupersync entry argument `flavour`; valid arguments are `flavor`, `workers`, and `budget`; did you mean `flavor`?
 --> tests/compile_fail/entry_bad_arg.rs:3:8
  |
3 | #[main(flavour = "current_thread")]
  |        ^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile_fail/entry_bad_arg.rs:4:19
  |
4 | async fn main() {}
  |                   ^ consider adding a `main` function to `$DIR/tests/compile_fail/entry_bad_arg.rs`
